--- a/package.json
+++ b/package.json
@@ -21,19 +21,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.1.0",
     "@angular/common": "^20.0.6",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.6",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.1.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.4",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "chart": "^0.1.2",
     "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
