--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "chart": "^0.1.2",
     "chart.js": "^4.5.0",
     "express": "^5.1.0",
+    "ngx-spinner": "^19.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0"
